Add image to pdf conversion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ usvg = "0.22.0"
 tiny-skia = "0.6.3"
 strum = { version = "0.24.0", features = ["derive"]}
 strum_macros = "0.24"
+pdf-writer = "0.6"
+miniz_oxide = "0.5.3"
 
 [lib]
 name = "converter_buddy"
