--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,12 @@ strum = { version = "0.24.0", features = ["derive"]}
 strum_macros = "0.24"
 pdf-writer = "0.6"
 miniz_oxide = "0.5.3"
+derive_builder = "0.12.0"
+paste = "1.0.12"
+smart-default = "0.6.0"
+
+[dev-dependencies]
+test-case = "3.1.0"
 
 [features]
 default = ["formats", "converters", "io", "decoders"]
